More preformed models/attempt to evaluate results

--- a/preformed-models.ipynb
+++ b/preformed-models.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "4   5  0--Parade/0_Parade_marchingband_1_778.jpg         0         35"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,16 +154,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1db535851c8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x278c9ef5a08>"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -186,16 +186,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1db527ae8c8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x278ca35d708>"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,12 +259,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to use ChainerCV, bounding boxes must follow the format (y_min, x_min, y_max, x_max)."
+    "### In order to use ChainerCV, bounding boxes must follow the format (y_min, x_min, y_max, x_max)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,25 +276,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_data = []\n",
-    "train_path = WIDERFACE.paths['train']\n",
+    "# training_data = []\n",
+    "# train_path = WIDERFACE.paths['train']\n",
+    "# counts_ids = WIDERFACE.bounding_boxes['train']['counts_id']\n",
     "\n",
-    "\n",
-    "for f in WIDERFACE.file_info['train'].itertuples():\n",
-    "    training_data.append((f'{train_path}/{f.image_path}', f.box_count,\n",
-    "                         [ [r.y_min, r.x_min, r.y_max, r.x_max] for r in \n",
-    "                          WIDERFACE.bounding_boxes['train'][counts_ids == f.id].itertuples() ]))\n",
-    "    \n",
-    "    "
+    "# for f in WIDERFACE.file_info['train'].itertuples():\n",
+    "#     training_data.append((f'{train_path}/{f.image_path}', f.box_count,\n",
+    "#                          [ [r.y_min, r.x_min, r.y_max, r.x_max] for r in \n",
+    "#                           WIDERFACE.bounding_boxes['train'][counts_ids == f.id].itertuples() ]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,36 +319,58 @@
     "    height integer,\n",
     "    foreign key (trial_id) references trials(id))'''\n",
     "\n",
+    "results_tables = [trials_table, counts_table, trials_bbx]\n",
+    "results_table_names = ['trials', 'trials_counts', 'trials_bbx']\n",
+    "\n",
     "def create_results_db(name = 'results.db'):\n",
     "    \n",
     "    con = sqlite3.connect(name)\n",
     "    if not con:\n",
     "        raise RuntimeError(f'Unable to load the database: \"{name}\"')\n",
     "    cur = con.cursor()\n",
-    "    for tb in db_tables:\n",
+    "    for tb in results_tables:\n",
     "        cur.execute(f'create table if not exists {tb}')\n",
+    "    con.close()\n",
+    "    \n",
+    "def drop_results_tables(name = 'results.db'):\n",
+    "    con = sqlite3.connect(name)\n",
+    "    cur = con.cursor()\n",
+    "    for tb in results_table_names:\n",
+    "        cur.execute(f'drop table if exists {tb}')\n",
     "    con.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<CascadeClassifier 000001DB535579F0>\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "drop_results_tables()\n",
+    "create_results_db()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def save_results(model_name, notes, counts, bbox):\n",
     "    con = sqlite3.connect('results.db')\n",
-    "    \n",
     "    cur = con.cursor()\n",
-    "    cur.execute('insert into trials(model_name, notes) values(?,?)', model_name, notes)\n",
+    "    cur.execute('insert into trials(model_name, notes) values(?,?)', (model_name, notes))\n",
+    "    trial_id = cur.lastrowid\n",
+    "    for (c, b) in zip(counts, bbox):\n",
+    "        cur.execute('insert into trials_counts(trial_id, image_path, box_count) values(?,?,?)',\n",
+    "                   (trial_id, c[0], c[1]))\n",
+    "        counts_id = cur.lastrowid\n",
+    "        for box in b:\n",
+    "            cur.execute('insert into trials_bbx(trial_id, counts_id, image_path, x, y, width, height) values(?,?,?,?,?,?,?)',\n",
+    "                       (trial_id, counts_id, c[0], int(box[0]), int(box[1]), int(box[2]), int(box[3])))\n",
+    "            \n",
+    "    con.commit()\n",
+    "    con.close()\n",
     "    "
    ]
   },
@@ -367,23 +387,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_opencv_cascade(file_paths, model, scale_factor = 1.1, min_neighbors = 3, use_gpu = True):\n",
+    "def run_opencv_cascade(file_paths, model, scale_factor = 1.1, min_neighbors = 3, use_grayscale = False, use_gpu = True):\n",
     "    classifier = cv2.CascadeClassifier(model)\n",
     "    counts = []\n",
     "    bboxes = []\n",
     "    start_time = timeit.default_timer()\n",
     "    for i in file_paths:\n",
     "        img = cv2.imread(i)\n",
+    "        \n",
+    "        if use_grayscale:\n",
+    "            img = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "        \n",
     "        # Converting a Mat object to a UMat object enables GPU processing.\n",
     "        if use_gpu:\n",
     "            img = cv2.UMat(img)\n",
     "\n",
     "        bboxes_found = classifier.detectMultiScale(img, scale_factor, min_neighbors)\n",
-    "        counts.append((i[0], len(bboxes_found)))\n",
+    "        counts.append((i, len(bboxes_found)))\n",
     "        bboxes.append(bboxes_found)\n",
     "    end_time = timeit.default_timer()\n",
     "    test_runtime = end_time - start_time\n",
@@ -393,21 +417,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "haar_path = './data/opencv_models/haarcascade_frontalface_default.xml'\n",
+    "# Jupyter does not like this syntax but I swear it's legal\n",
+    "train_paths = [ f'{WIDERFACE.paths[\"train\"]}/{f}' for f in WIDERFACE.file_info['train']['image_path'] ]\n",
+    "val_paths = [ f'{WIDERFACE.paths[\"val\"]}/{f}' for f in WIDERFACE.file_info['val']['image_path'] ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Harr Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 12880 bounding boxes for 12880 images after 1095.1885528999992 seconds.\n"
+      "Found bounding boxes for 12880 images after 1456.94907 seconds.\n"
      ]
     }
    ],
    "source": [
-    "haar_path = './data/opencv_models/haarcascade_frontalface_default.xml'\n",
-    "file_paths = [ d[0] for d in training_data ]\n",
-    "counts, bbx = run_opencv_cascade(file_paths, haar_path)"
+    "counts, bbx = run_opencv_cascade(train_paths, haar_path)\n",
+    "save_results('haar','scale: 1.1, neighbors: 3', counts, bbx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First go: Found bounding boxes for 12880 images after 1494.7744105000002 seconds.\n",
+    "# Second go: Found bounding boxes for 12880 images after 1456.94907 seconds."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found bounding boxes for 12880 images after 1060.9001706999998 seconds.\n"
+     ]
+    }
+   ],
+   "source": [
+    "gs_counts, gs_bbx = run_opencv_cascade(train_paths, haar_path, use_grayscale = True)\n",
+    "save_results('haar','grayscale, scale: 1.1, neighbors: 3', gs_counts, gs_bbx)"
    ]
   },
   {
@@ -415,14 +485,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# First go: Found bounding boxes for 12880 images after 1060.9001706999998 seconds.\n",
+    "# That's about 8 minutes faster. Not amazing, but helpful."
+   ]
   }
  ],
  "metadata": {
