--- a/bbox-comparison.ipynb
+++ b/bbox-comparison.ipynb
@@ -58,10 +58,10 @@
     "        'guessed_boxes': 0,\n",
     "        'false_positives': 0,\n",
     "        'false_negatives': 0,\n",
-    "        'bad_guesses': 0,        # < .25\n",
-    "        'unlikely_guesses': 0,   # < .5\n",
-    "        'okay_guesses': 0,       # < .75\n",
-    "        'good_guesses': 0,       # < .9\n",
+    "        'bad_guesses': 0,        # < .05\n",
+    "        'unlikely_guesses': 0,   # < .3\n",
+    "        'okay_guesses': 0,       # < .5\n",
+    "        'good_guesses': 0,       # < .75\n",
     "        'great_guesses': 0,      # else\n",
     "        'details': []\n",
     "    }\n",
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -417,8 +417,7 @@
       "This model idenitified 57903 total bounding boxes, though 16220 of them did not correspond to a real bounding box.\n",
       "117741 known boxes failed to be identified (73.85%).\n",
       "Of the guessed boxes, 12326 were very unlikely to be a match and 2856 are probably not accurate.\n",
-      "26501 (16.62% of total) were identified with reasonably high confidence.\n",
-      "\n"
+      "26501 (16.62% of total) were identified with reasonably high confidence.\n"
      ]
     }
    ],
