Alt haar performance

--- a/bbox-comparison.ipynb
+++ b/bbox-comparison.ipynb
@@ -434,21 +434,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yhat3 = fetch_results(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res3 = evaluate_performance(ytrue, yhat3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'4.3.0'"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This model idenitified 57903 total bounding boxes, though 16220 of them did not correspond to a real bounding box.\n",
+      "117741 known boxes failed to be identified (73.85%).\n",
+      "Of the guessed boxes, 12326 were very unlikely to be a match and 2856 are probably not accurate.\n",
+      "26501 (16.62% of total) were identified with reasonably high confidence.\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "basic_results_analysis(res3)"
+   ]
   },
   {
    "cell_type": "code",
