Haar Alt Results

--- a/preformed-models.ipynb
+++ b/preformed-models.ipynb
@@ -530,9 +530,23 @@
     }
    ],
    "source": [
-    "extended_counts, extended_bbx = run_opencv_cascade(train_paths, haar_expanded_path, n_threads = 16)\n",
-    "save_results('haar extended','scale: 1.1, neighbors: 3', gs_counts, gs_bbx)"
+    "alt_counts, alt_bbx = run_opencv_cascade(train_paths, haar_expanded_path, n_threads = 16)\n",
+    "save_results('haar alt','scale: 1.1, neighbors: 3', alt_counts, alt_bbx)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
