--- a/preformed-models.ipynb
+++ b/preformed-models.ipynb
@@ -536,10 +536,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "alt_counts2, alt_bbx2 = run_opencv_cascade(train_paths, haar_expanded_path, n_threads = 100, scale_factor = 1.2)\n",
+    "save_results('haar alt','scale: 1.2, neighbors: 3', alt_counts2, alt_bbx2)"
+   ]
   },
   {
    "cell_type": "code",
