Scale/Neighbors Visualizations

--- a/bbox-comparison.ipynb
+++ b/bbox-comparison.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
        " 2                1         3   0.932834  }"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
     "        y1 = b[1]\n",
     "        x2 = b[0] + b[2]\n",
     "        y2 = b[1] + b[3]\n",
-    "        cv2.rectangle(i, (x1, y1), (x2, y2), (0, 0, 255), 2)\n",
+    "        cv2.rectangle(i, (x1, y1), (x2, y2), (255, 0, 0), 2)\n",
     "    i2 = i[:,:,::-1]\n",
     "    img_name = image_path.split('/')[1]\n",
     "    save_path = f'{out_dir}/{img_name}'\n",
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,6 +612,78 @@
    "outputs": [],
    "source": [
     "draw_test_true_comparison(yhat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scale_neighbors_compare = {}\n",
+    "for i in range(13, 29):\n",
+    "    yhat = fetch_results(i)\n",
+    "    res = evaluate_performance(ytrue, yhat)\n",
+    "    scale_neighbors_compare[i] = {\n",
+    "        'false_positives': res['false_positives'],\n",
+    "        'false_negatives': res['false_negatives'],\n",
+    "        'likely_accurate': res['okay_guesses'] + res['good_guesses'] + res['great_guesses']\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{13: {'false_positives': 1577,\n",
+       "  'false_negatives': 10753,\n",
+       "  'likely_accurate': 2679},\n",
+       " 14: {'false_positives': 580,\n",
+       "  'false_negatives': 12020,\n",
+       "  'likely_accurate': 2091},\n",
+       " 15: {'false_positives': 71, 'false_negatives': 13979, 'likely_accurate': 629},\n",
+       " 16: {'false_positives': 60, 'false_negatives': 13811, 'likely_accurate': 861},\n",
+       " 17: {'false_positives': 31, 'false_negatives': 14252, 'likely_accurate': 561},\n",
+       " 18: {'false_positives': 9, 'false_negatives': 14553, 'likely_accurate': 353},\n",
+       " 19: {'false_positives': 0, 'false_negatives': 14894, 'likely_accurate': 220},\n",
+       " 20: {'false_positives': 11, 'false_negatives': 15004, 'likely_accurate': 159},\n",
+       " 21: {'false_positives': 7703,\n",
+       "  'false_negatives': 7852,\n",
+       "  'likely_accurate': 3394},\n",
+       " 22: {'false_positives': 3117,\n",
+       "  'false_negatives': 9647,\n",
+       "  'likely_accurate': 2981},\n",
+       " 23: {'false_positives': 1577,\n",
+       "  'false_negatives': 10753,\n",
+       "  'likely_accurate': 2679},\n",
+       " 24: {'false_positives': 958,\n",
+       "  'false_negatives': 11457,\n",
+       "  'likely_accurate': 2440},\n",
+       " 25: {'false_positives': 624,\n",
+       "  'false_negatives': 11950,\n",
+       "  'likely_accurate': 2262},\n",
+       " 26: {'false_positives': 422,\n",
+       "  'false_negatives': 12300,\n",
+       "  'likely_accurate': 2111},\n",
+       " 27: {'false_positives': 285,\n",
+       "  'false_negatives': 12602,\n",
+       "  'likely_accurate': 1961},\n",
+       " 28: {'false_positives': 218,\n",
+       "  'false_negatives': 12811,\n",
+       "  'likely_accurate': 1869}}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scale_neighbors_compare"
    ]
   },
   {
