--- a/preformed-models.ipynb
+++ b/preformed-models.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "4   5  0--Parade/0_Parade_marchingband_1_778.jpg         0         35"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,16 +188,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1b0c25e7948>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2aa61abdd08>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -220,16 +220,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1b0d387ab48>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2aa62762208>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,6 +340,7 @@
     "    trial_id integer,\n",
     "    image_path text,\n",
     "    box_count integer,\n",
+    "    runtime float,\n",
     "    foreign key (trial_id) references trials(id))'''\n",
     "\n",
     "trials_bbx = '''trials_bbx (\n",
@@ -386,14 +387,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_results(model_name, notes, counts, bbox):\n",
+    "def save_results(model_name, notes, counts, bbox, runtime = 0):\n",
     "    con = sqlite3.connect('results.db')\n",
     "    cur = con.cursor()\n",
-    "    cur.execute('insert into trials(model_name, notes) values(?,?)', (model_name, notes))\n",
+    "    cur.execute('insert into trials(model_name, notes, runtime) values(?,?, ?)', (model_name, notes, runtime))\n",
     "    trial_id = cur.lastrowid\n",
     "    for (c, b) in zip(counts, bbox):\n",
     "        cur.execute('insert into trials_counts(trial_id, image_path, box_count) values(?,?,?)',\n",
@@ -422,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +454,7 @@
     "    end_time = timeit.default_timer()\n",
     "    test_runtime = end_time - start_time\n",
     "    print(f'Found {total_bbx} bounding boxes for {len(counts)} images after {test_runtime} seconds.')\n",
-    "    return counts, bboxes"
+    "    return counts, bboxes, test_runtime"
    ]
   },
   {
@@ -476,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,6 +529,110 @@
     "counts, bbx = run_opencv_cascade(sample_paths, haar_path)\n",
     "save_results('haar','scale: 1.1, neighbors: 3, 5% sample', counts, bbx)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 51755 bounding boxes for 12876 images after 2566.0040602 seconds.\n",
+      "Saved results as trial #12\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample2 = sample_train(1)\n",
+    "counts, bbx = run_opencv_cascade(sample2, haar_path)\n",
+    "save_results('haar','scale: 1.1, neighbors: 3, full data', counts, bbx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 6033 bounding boxes for 1288 images after 98.33224029999974 seconds.\n",
+      "Saved results as trial #13\n",
+      "Found 3769 bounding boxes for 1288 images after 62.05531279999968 seconds.\n",
+      "Saved results as trial #14\n",
+      "Found 1301 bounding boxes for 1288 images after 36.70231909999984 seconds.\n",
+      "Saved results as trial #15\n",
+      "Found 1458 bounding boxes for 1288 images after 33.29473750000034 seconds.\n",
+      "Saved results as trial #16\n",
+      "Found 988 bounding boxes for 1288 images after 31.963287600000058 seconds.\n",
+      "Saved results as trial #17\n",
+      "Found 665 bounding boxes for 1288 images after 31.364904600000045 seconds.\n",
+      "Saved results as trial #18\n",
+      "Found 315 bounding boxes for 1288 images after 29.61391500000036 seconds.\n",
+      "Saved results as trial #19\n",
+      "Found 216 bounding boxes for 1288 images after 37.511060700000144 seconds.\n",
+      "Saved results as trial #20\n",
+      "Found 15060 bounding boxes for 1288 images after 92.8313235999999 seconds.\n",
+      "Saved results as trial #21\n",
+      "Found 8679 bounding boxes for 1288 images after 90.95675709999978 seconds.\n",
+      "Saved results as trial #22\n",
+      "Found 6033 bounding boxes for 1288 images after 89.63976509999975 seconds.\n",
+      "Saved results as trial #23\n",
+      "Found 4710 bounding boxes for 1288 images after 89.44185450000032 seconds.\n",
+      "Saved results as trial #24\n",
+      "Found 3883 bounding boxes for 1288 images after 90.2494572999999 seconds.\n",
+      "Saved results as trial #25\n",
+      "Found 3331 bounding boxes for 1288 images after 97.52856650000012 seconds.\n",
+      "Saved results as trial #26\n",
+      "Found 2892 bounding boxes for 1288 images after 97.01779490000035 seconds.\n",
+      "Saved results as trial #27\n",
+      "Found 2616 bounding boxes for 1288 images after 100.66245570000001 seconds.\n",
+      "Saved results as trial #28\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample3 = sample_train(.1)\n",
+    "\n",
+    "params = [ \n",
+    "    [1.1, 3],\n",
+    "    [1.2, 3],\n",
+    "    [1.6, 3],\n",
+    "    [2.0, 3],\n",
+    "    [2.5, 3],\n",
+    "    [3.0, 3],\n",
+    "    [5.0, 3],\n",
+    "    [8.0, 3],\n",
+    "    [1.1, 1],\n",
+    "    [1.1, 2],\n",
+    "    [1.1, 3],\n",
+    "    [1.1, 4],\n",
+    "    [1.1, 5],\n",
+    "    [1.1, 6],\n",
+    "    [1.1, 7],\n",
+    "    [1.1, 8]]\n",
+    "\n",
+    "for p in params:\n",
+    "    counts, bbx, time = run_opencv_cascade(sample3, haar_path, scale_factor = p[0], min_neighbors = p[1])\n",
+    "    save_results('haar',f'scale: {p[0]}, neighbors: {p[1]}, 10% sample', counts, bbx, time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
